# execution-agent

./: .gitignore  .gitmodules  Cargo.toml  README.md  build-release.sh
.github/workflows/: default-workflow.yml  devskim.yml
OvertestExecutionAgentBindings/: OvertestExecutionAgentBindings.csproj  OvertestExecutionAgentBindings.sln
OvertestExecutionAgentBindings/Request/: ExecutionAgentRequestConfig.cs  OvertestAgentRequestConfig.cs  ProgramExecutionParameters.cs  RuntimeLimitsOptions.cs  StreamsRedirectionOptions.cs
OvertestExecutionAgentBindings/Response/: ExecutionAgentResponse.cs  ResourcesUsage.cs
OvertestExecutionAgentBindings/Result/: OvertestAgentExecutionResult.cs  ResourcesUsage.cs
src/: execution_result.rs  main.rs  request_config.rs
