[package]
name = "execution-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.142"
nix = "0.26.2"
limtrac = { path = "limtrac" }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
#pyo3 = { version = "0.18.3", features = ["auto-initialize"] }
